--- a/src/TeslaCamPlayer.BlazorHosted/Client/wwwroot/scss/components/_viewer.scss
+++ b/src/TeslaCamPlayer.BlazorHosted/Client/wwwroot/scss/components/_viewer.scss
@@ -264,7 +264,7 @@
 
         .mode-switch-btn {
              top: 10px;
-             right: 15px; // Adjust if needed
+             right: 110px; // Adjusted to avoid overlap with profile icon
         }
 
         &.viewer--360 {
